fix:修复音乐播放功能